Resolves: tdf#46440 SIGSEGV on toolkit bootstrap without running instance

Change-Id: I9a78a75b3d72586b1702ed6fa63bb0b62ce6cd72